--- a/index.html
+++ b/index.html
@@ -78,8 +78,19 @@
     </section>
     <section class="offer">
         <h2 class="section-title gold">¡Oferta limitada!</h2>
-        <p>Descuento especial solo por hoy</p> <br>20% de descuento en tu compra con el código: <strong>GAMER20</strong>
-        <br><br>    
+        <h3>Descuento especial solo por hoy</h3>
+        <div class="price-container">
+            <div class="price-box">
+                <p class="label-price">Precio original</p>
+                <p class="original-price">$129.99</p>
+            </div>
+            <div class="price-separator">→</div>
+            <div class="price-box highlighted">
+                <p class="label-price">Ahora pagas</p>
+                <p class="discounted-price">$89.99</p>
+                <p class="discount-badge">-31% Descuento</p>
+            </div>
+        </div>
         <div class="timer" id="timer"></div>
         <button class="cta-button neon" id="cta-offer">Aprovecha el Descuento</button>
     </section>
